--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -32,8 +32,8 @@ jobs:
         run: terraform fmt -check -recursive
 
       - name: Terraform Init
-        run: terraform init -backend-config="access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" -backend-config="secret_key=${{ secrets.AWS_ACCESS_KEY_ID }}"
-
+        run: terraform init -backend=false
+        
       - name: Terraform Validate
         run: terraform validate
 
